# serde-cross-format

./: Cargo.toml  README.md  example.schema.json  example.schema.yaml
src/: main.rs
